Add repair touching rings.