@@ -7,7 +7,7 @@ import com.vividsolutions.jts.geom.MultiPolygon;
 
 import ch.interlis.iom.IomObject;
 import ch.interlis.iom_j.Iom_jObject;
-import net.iharder.Base64;
+import javax.xml.bind.DatatypeConverter;
 
 
 public class Iox2wkbTest {
@@ -30,7 +30,7 @@ public class Iox2wkbTest {
         // convert
         byte wkb[]=conv.polyline2wkb(polylineValue, false,false, 0.01);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
         assertEquals("AAAAAAIAAAATQUQTPoO2RaJBMrUXw9cKPUFEEz7g8nMWQTK1GKn87ZtBRBM/N164l0EytRmaiU+wQUQTP4axAUZBMrUalK398kFEEz/OpU6nQTK1G5eUjFBBRBNADv3y5EEytRyiXwz9QUQTQEeDxa9BMrUdtCjOsEFEE0B4BlOKQTK1HswHIKdBRBNAoFwHT0EytR/pChvdQUQTQMBiTdNBMrUhCj1wpEFEE0DX/fx6QTK1Ii6tie9BRBNA5xpNv0EytSNVW3l8QUQTQO2qTVZBMrUkfUqerEFEE0DrqFr/QTK1JaV9RYBBRBNA4RYvVEEytSbM9YAbQUQTQM382lNBMrUn8rYAcUFEE0CybLuWQTK1KRXC8W9BRBNAjn10SkEytSo1Is7kQUQTQGJN0vJBMrUrT987ZA==",wkbText);
     }
     @Test
@@ -59,8 +59,8 @@ public class Iox2wkbTest {
         // convert
         byte wkb[]=conv.surface2wkb(multiSurface, true, 0.0);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
-        assertEquals("AAAAAAoAAAABAAAAAAkAAAABAAAAAAIAAAAEQR1MAAAAAABA8RcAAAAAAEEehIAAAAAAQPOIAAAAAABBIMjgAAAAAED1+QAAAAAAQR1MAAAAAABA8RcAAAAAAA==",wkbText);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
+        assertEquals("000000000A00000001000000000200000004411D4C000000000040F1170000000000411E84800000000040F38800000000004120C8E00000000040F5F90000000000411D4C000000000040F1170000000000",wkbText);
     }
     @Test
     public void surfaceMultiplePoylines_Ok() throws Exception{
@@ -98,10 +98,10 @@ public class Iox2wkbTest {
             endSegment3.setattrvalue("C2", "70000.000");
         }
         // convert
-        byte wkb[]=conv.surface2wkb(multiSurface, true, 0.0);
+        byte wkb[]=conv.surface2wkb(multiSurface, true, 0.0, false);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
-        assertEquals("AAAAAAoAAAABAAAAAAkAAAABAAAAAAIAAAAEQR1MAAAAAABA8RcAAAAAAEEehIAAAAAAQPOIAAAAAABBIMjgAAAAAED1+QAAAAAAQR1MAAAAAABA8RcAAAAAAA==",wkbText);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
+        assertEquals("000000000A00000003000000000200000002411D4C000000000040F1170000000000411E84800000000040F3880000000000000000000200000002411E84800000000040F38800000000004120C8E00000000040F5F900000000000000000002000000024120C8E00000000040F5F90000000000411D4C000000000040F1170000000000",wkbText);
     }
 
     private IomObject getSurfaceZ() {
@@ -139,8 +139,8 @@ public class Iox2wkbTest {
         Iox2wkb convWkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, false);
         byte wkb[]=convWkb.surface2wkb(multiSurface, true, 0.0);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
-        assertEquals("AfIDAAABAAAAAfEDAAABAAAAAeoDAAAEAAAAAAAAAABMHUEAAAAAABfxQAAAAAAAAPA/AAAAAICEHkEAAAAAAIjzQAAAAAAAAPA/AAAAAODIIEEAAAAAAPn1QAAAAAAAAPA/AAAAAABMHUEAAAAAABfxQAAAAAAAAPA/",wkbText);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
+        assertEquals("01F20300000100000001EA0300000400000000000000004C1D41000000000017F140000000000000F03F0000000080841E41000000000088F340000000000000F03F00000000E0C820410000000000F9F540000000000000F03F00000000004C1D41000000000017F140000000000000F03F",wkbText);
     }
     
     @Test
@@ -149,8 +149,8 @@ public class Iox2wkbTest {
         Iox2wkb convEwkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, true);
         byte ewkb[]=convEwkb.surface2wkb(multiSurface, true, 0.0);
         // verify
-        String ewkbText=Base64.encodeBytes(ewkb);
-        assertEquals("AQoAAIABAAAAAQkAAIABAAAAAQIAAIAEAAAAAAAAAABMHUEAAAAAABfxQAAAAAAAAPA/AAAAAICEHkEAAAAAAIjzQAAAAAAAAPA/AAAAAODIIEEAAAAAAPn1QAAAAAAAAPA/AAAAAABMHUEAAAAAABfxQAAAAAAAAPA/",ewkbText);
+        String ewkbText=DatatypeConverter.printHexBinary(ewkb);
+        assertEquals("010A0000800100000001020000800400000000000000004C1D41000000000017F140000000000000F03F0000000080841E41000000000088F340000000000000F03F00000000E0C820410000000000F9F540000000000000F03F00000000004C1D41000000000017F140000000000000F03F",ewkbText);
     }
     
     private IomObject getMultiCoordZ() {
@@ -182,8 +182,8 @@ public class Iox2wkbTest {
         Iox2wkb convWkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, false);
         byte wkb[]=convWkb.multicoord2wkb(multiPoint);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
-        assertEquals("AewDAAAEAAAAAekDAAAAAAAAGGYtQQAAAACqcDBBAAAAAAAA8D8B6QMAAAAAAAAgZi1BAAAAAKNwMEEAAAAAAADwPwHpAwAAAAAAAChmLUEAAAAApXAwQQAAAAAAAABAAekDAAAAAAAAHmYtQQAAAACscDBBAAAAAAAAAEA=",wkbText);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
+        assertEquals("01EC0300000400000001E90300000000000018662D4100000000AA703041000000000000F03F01E90300000000000020662D4100000000A3703041000000000000F03F01E90300000000000028662D4100000000A5703041000000000000004001E9030000000000001E662D4100000000AC7030410000000000000040",wkbText);
     }
 
     @Test
@@ -192,8 +192,8 @@ public class Iox2wkbTest {
         Iox2wkb convEwkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, true);
         byte ewkb[]=convEwkb.multicoord2wkb(multiPoint);
         // verify
-        String ewkbText=Base64.encodeBytes(ewkb);
-        assertEquals("AQQAAIAEAAAAAQEAAIAAAAAAGGYtQQAAAACqcDBBAAAAAAAA8D8BAQAAgAAAAAAgZi1BAAAAAKNwMEEAAAAAAADwPwEBAACAAAAAAChmLUEAAAAApXAwQQAAAAAAAABAAQEAAIAAAAAAHmYtQQAAAACscDBBAAAAAAAAAEA=",ewkbText);
+        String ewkbText=DatatypeConverter.printHexBinary(ewkb);;
+        assertEquals("01040000800400000001010000800000000018662D4100000000AA703041000000000000F03F01010000800000000020662D4100000000A3703041000000000000F03F01010000800000000028662D4100000000A570304100000000000000400101000080000000001E662D4100000000AC7030410000000000000040",ewkbText);
     }
     
     private IomObject getMultiPolyLineZ() {
@@ -242,7 +242,7 @@ public class Iox2wkbTest {
         Iox2wkb convWkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, false);
         byte wkb[]=convWkb.multiline2wkb(multiPolyLine, false, 0.0);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
         assertEquals("Ae0DAAACAAAAAeoDAAADAAAAAAAAABhmLUEAAAAAqnAwQQAAAAAAAPA/AAAAACBmLUEAAAAAo3AwQQAAAAAAAPA/AAAAAChmLUEAAAAApXAwQQAAAAAAAPA/AeoDAAADAAAAAAAAAChmLUEAAAAApXAwQQAAAAAAAABAAAAAAB5mLUEAAAAArHAwQQAAAAAAAABAAAAAABhmLUEAAAAAqnAwQQAAAAAAAABA",wkbText);
     }
 
@@ -252,7 +252,7 @@ public class Iox2wkbTest {
         Iox2wkb convEwkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, true);
         byte ewkb[]=convEwkb.multiline2wkb(multiPolyLine, false, 0.0);
         // verify
-        String ewkbText=Base64.encodeBytes(ewkb);
+        String ewkbText=DatatypeConverter.printHexBinary(ewkb);;
         assertEquals("AQUAAIACAAAAAQIAAIADAAAAAAAAABhmLUEAAAAAqnAwQQAAAAAAAPA/AAAAACBmLUEAAAAAo3AwQQAAAAAAAPA/AAAAAChmLUEAAAAApXAwQQAAAAAAAPA/AQIAAIADAAAAAAAAAChmLUEAAAAApXAwQQAAAAAAAABAAAAAAB5mLUEAAAAArHAwQQAAAAAAAABAAAAAABhmLUEAAAAAqnAwQQAAAAAAAABA",ewkbText);
     }
 
@@ -293,8 +293,8 @@ public class Iox2wkbTest {
         Iox2wkb convWkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, false);
         byte wkb[]=convWkb.multisurface2wkb(multiSurface, false, 0.0);
         // verify
-        String wkbText=Base64.encodeBytes(wkb);
-        assertEquals("Ae4DAAABAAAAAesDAAABAAAABQAAAAAAAAAYZi1BAAAAAKpwMEEAAAAAAADwPwAAAAAgZi1BAAAAAKNwMEEAAAAAAADwPwAAAAAoZi1BAAAAAKVwMEEAAAAAAAAAQAAAAAAeZi1BAAAAAKxwMEEAAAAAAAAAQAAAAAAYZi1BAAAAAKpwMEEAAAAAAADwPw==",wkbText);
+        String wkbText=DatatypeConverter.printHexBinary(wkb);;
+        assertEquals("01EE0300000100000001EB03000001000000040000000000000018662D4100000000AA703041000000000000F03F0000000020662D4100000000A3703041000000000000F03F0000000028662D4100000000A57030410000000000000040000000001E662D4100000000AC7030410000000000000040",wkbText);
     }
     
     @Test
@@ -303,7 +303,37 @@ public class Iox2wkbTest {
         Iox2wkb convEwkb=new Iox2wkb(3,java.nio.ByteOrder.LITTLE_ENDIAN, true);
         byte ewkb[]=convEwkb.multisurface2wkb(multiSurface, false, 0.0);
         // verify
-        String ewkbText=Base64.encodeBytes(ewkb);
-        assertEquals("AQYAAIABAAAAAQMAAIABAAAABQAAAAAAAAAYZi1BAAAAAKpwMEEAAAAAAADwPwAAAAAgZi1BAAAAAKNwMEEAAAAAAADwPwAAAAAoZi1BAAAAAKVwMEEAAAAAAAAAQAAAAAAeZi1BAAAAAKxwMEEAAAAAAAAAQAAAAAAYZi1BAAAAAKpwMEEAAAAAAADwPw==",ewkbText);
+        String ewkbText=DatatypeConverter.printHexBinary(ewkb);
+        assertEquals("010600008001000000010300008001000000040000000000000018662D4100000000AA703041000000000000F03F0000000020662D4100000000A3703041000000000000F03F0000000028662D4100000000A57030410000000000000040000000001E662D4100000000AC7030410000000000000040",ewkbText);
+    }
+
+    @Test
+    public void surfaceRepairTouchingRing_Ok() throws Exception {
+        IomObject multiSurface=getBananaPolygon();
+        Iox2wkb convWkb=new Iox2wkb(2, java.nio.ByteOrder.BIG_ENDIAN, false);
+        byte wkb[]=convWkb.surface2wkb(multiSurface, false, 0.0, true);
+        // verify
+
+        String wkbText=DatatypeConverter.printHexBinary(wkb);
+        assertEquals("00000000030000000200000006414434F80000000041330F7400000000414434F8000000004133057C0000000041443DB3000000004133057C0000000041443DB30000000041330A4D0000000041443DB30000000041330F7400000000414434F80000000041330F74000000000000000541443DB30000000041330A4D0000000041443C6A00000000413308EC0000000041443B408000000041330A4D0000000041443C6A0000000041330BDC0000000041443DB30000000041330A4D00000000",wkbText);
+    }
+
+    private IomObject getBananaPolygon() {
+        IomObject multiSurface=new Iom_jObject("MULTISURFACE", null);
+        IomObject surfaceValue = multiSurface.addattrobj("surface", "SURFACE");
+        // outer boundary
+        IomObject outerBoundary = surfaceValue.addattrobj("boundary", "BOUNDARY");
+        // polyline
+        IomObject polylineValue = outerBoundary.addattrobj("polyline", "POLYLINE");
+
+        IomObject segments=polylineValue.addattrobj("sequence", "SEGMENTS");
+
+        double[] coords = new double[]{2648560, 1249140, 2648560, 1246588, 2653030, 1246588, 2653030, 1247821, 2652372, 1247468, 2651777, 1247821, 2652372, 1248220, 2653030, 1247821, 2653030, 1249140, 2648560, 1249140};
+        for (int i = 0; i < coords.length; i+=2) {
+            IomObject coord = segments.addattrobj("segment", "COORD");
+            coord.setattrvalue("C1", Double.toString(coords[i]));
+            coord.setattrvalue("C2", Double.toString(coords[i+1]));
+        }
+        return multiSurface;
     }
 }
